welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var c:Int
    ^close10:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var d:Int
    ^